Added ide exclusion for mdtool

--- a/XamarinStudioGradleExtension/XamarinStudioGradleExtension.csproj
+++ b/XamarinStudioGradleExtension/XamarinStudioGradleExtension.csproj
@@ -12,7 +12,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\Library\Application Support\XamarinStudio-5.0\LocalInstall\Addins\XamarinStudioGradleExtension</OutputPath>
+    <OutputPath>..\..\..\..\Library\Application Support\XamarinStudio-5.0\LocalInstall\Addins\XamarinStudioGradleExtension.XamarinStudioGradleExtension.1.0</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,7 +25,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
+    <OutputPath>.</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
@@ -39,18 +39,23 @@
     <Reference Include="Mono.Posix" />
     <Reference Include="MonoDevelop.Core">
       <HintPath>..\..\..\..\..\..\Applications\Xamarin Studio.app\Contents\MacOS\lib\monodevelop\bin\MonoDevelop.Core.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="MonoDevelop.Ide">
       <HintPath>..\..\..\..\..\..\Applications\Xamarin Studio.app\Contents\MacOS\lib\monodevelop\bin\MonoDevelop.Ide.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="MonoDevelop.IPhone">
       <HintPath>..\..\..\..\..\..\Applications\Xamarin Studio.app\Contents\MacOS\lib\monodevelop\AddIns\MonoDevelop.IPhone\MonoDevelop.IPhone.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Xamarin.Ide">
       <HintPath>..\..\..\..\..\..\Applications\Xamarin Studio.app\Contents\MacOS\lib\monodevelop\AddIns\Xamarin.Ide\Xamarin.Ide.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="MonoDevelop.MacDev">
       <HintPath>..\..\..\..\..\..\Applications\Xamarin Studio.app\Contents\MacOS\lib\monodevelop\AddIns\MonoDevelop.MacDev\MonoDevelop.MacDev.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +84,7 @@
     <Compile Include="gtk-gui\XamarinStudioGradleExtension.GlobalGradleOptionsWidget.cs" />
     <Compile Include="GlobalGradleOptionsPanel.cs" />
     <Compile Include="GlobalProperties.cs" />
+    <Compile Include="DirectBuildHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
